# advent-py-24

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/solutions/: advent_01.py  advent_02.py  advent_03.py
tests/solutions/: test_advent_01.py  test_advent_02.py  test_advent_03.py
