[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advent-py-24"
version = "0.1.0"
description = "Advent of Code 2024 Python Solutions"
authors = [{ name = "czyrux", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.9",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I"]

[tool.mypy]
python_version = "3.8"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true
